# strava-activity-update

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
lambda/: constants.py  garmin_client.py  index.py  strava_auth.py  strava_client.py
scripts/: create_dependency_zip.sh  get_strava_refresh_token.py
src/upload_garmin_runs_to_strava/: __init__.py  constants.py  garmin_client.py  index.py  strava_client.py
terraform/: .terraform.lock.hcl  dynamodb.tf  iam.tf  lambda.tf  lambda_dependency_layer.tf  vars.tf  vars.tfvars.tmpl
tests/: test_garmin_client.py  test_index.py  test_strava_client.py
