[project]
name = "upload_garmin_runs_to_strava"
version = ""
description = ""
authors = [
    {name = "Kaden", email = ""},
]
dependencies = [
    "aws-lambda-typing>=2.18.0",
    "stravalib>=1.5",
    "garth>=0.4.18",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "boto3>=1.29.4",
]

