[project]
name = "upload_garmin_runs_to_strava"
version = "0.10.1"
description = ""
authors = [
    {name = "Kaden"},
]
dependencies = [
    "aws-lambda-typing>=2.18.0",
    "stravalib>=1.5",
    "garth>=0.4.18",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.mypy]
packages = ["lambda", "tests", "scripts"]

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "boto3>=1.29.4",
    "boto3-stubs[dynamodb]>=1.29.5",
]

